--- a/playbooks/templates/designate_pools.yml.j2
+++ b/playbooks/templates/designate_pools.yml.j2
@@ -1,4 +1,4 @@
-# Pool Definition - need to templateize
+# {{ ansible_managed }}
 designate_pools_yaml:
   - name: "default"
     description: Default BIND9 Pool
@@ -7,18 +7,22 @@ designate_pools_yaml:
       - hostname: ns1.openstack.local.
         priority: 1
     nameservers:
-      - host: "{{ hostvars[groups['hosts'][0]]['ansible_host'] }}"
+{% for designate_bind in groups['designate_bind_all'] %}
+      - host: {{ hostvars[designate_bind]['ansible_host'] }}
         port: 53
+{% endfor %}
     targets:
+{% for designate_bind in groups['designate_bind_all'] %}
       - type: bind9
-        description: BIND9 Server
+        description: BIND9 Server {{ hostvars[designate_bind]['ansible_host'] }}
         masters:
-{%- for designate in groups['designate_all'] %}   
-          - host: "{{ hostvars[designate]['ansible_host'] }}"
+{% for designate in groups['designate_all'] %}
+          - host: {{ hostvars[designate]['ansible_host'] }}
             port: 5354
 {% endfor %}
         options:
-          host: "{{ hostvars[groups['hosts'][0]]['ansible_host'] }}"
+          host: {{ hostvars[designate_bind]['ansible_host'] }}
           port: 53
-          rndc_host: "{{ hostvars[groups['hosts'][0]]['ansible_host'] }}"
+          rndc_host: {{ hostvars[designate_bind]['ansible_host'] }}
           rndc_port: 953
+{% endfor %}
