--- a/playbooks/templates/designate_pools.yml.j2
+++ b/playbooks/templates/designate_pools.yml.j2
@@ -1,4 +1,4 @@
-# Pool Definition
+# Pool Definition - need to templateize
 designate_pools_yaml:
   - name: "default"
     description: Default BIND9 Pool
@@ -13,8 +13,10 @@ designate_pools_yaml:
       - type: bind9
         description: BIND9 Server
         masters:
-          - host: "{{ hostvars[groups['designate_all'][0]]['ansible_host'] }}"
+{%- for designate in groups['designate_all'] %}   
+          - host: "{{ hostvars[designate]['ansible_host'] }}"
             port: 5354
+{% endfor %}
         options:
           host: "{{ hostvars[groups['hosts'][0]]['ansible_host'] }}"
           port: 53
